--- a/src/app/business/expenses/expenses.component.html
+++ b/src/app/business/expenses/expenses.component.html
@@ -12,7 +12,7 @@
         
                     <div class="info-box-content">
                         <span class="info-box-text">Today</span>
-                        <span class="info-box-number">2,000</span>
+                        <span class="info-box-number">{{dayAmount | currency:'₦'}}</span>
                         <span class="info-box-text">
                             <a href="#" class="small-box-footer">More info
                                 <i class="fa fa-arrow-circle-right"></i>
@@ -32,7 +32,7 @@
         
                     <div class="info-box-content">
                         <span class="info-box-text">This Week</span>
-                        <span class="info-box-number">20,000</span>
+                        <span class="info-box-number">{{weekAmount | currency:'₦'}}</span>
                         <span class="info-box-text">
                             <a href="#" class="small-box-footer">More info
                                 <i class="fa fa-arrow-circle-right"></i>
@@ -56,7 +56,7 @@
         
                     <div class="info-box-content">
                         <span class="info-box-text">This Month</span>
-                        <span class="info-box-number">200,000</span>
+                        <span class="info-box-number">{{monthAmount | currency:'₦'}}</span>
                         <span class="info-box-text">
                             <a href="#" class="small-box-footer">More info
                                 <i class="fa fa-arrow-circle-right"></i>
@@ -76,7 +76,7 @@
         
                     <div class="info-box-content">
                         <span class="info-box-text">This Year</span>
-                        <span class="info-box-number">2,000,000</span>
+                        <span class="info-box-number">{{yearAmount | currency:'₦'}}</span>
                         <span class="info-box-text">
                             <a href="#" class="small-box-footer">More info
                                 <i class="fa fa-arrow-circle-right"></i>
