--- a/src/app/business/revenue/revenue.component.css
+++ b/src/app/business/revenue/revenue.component.css
@@ -16,6 +16,11 @@
  * ----------
  */
 
+.small-box-footer{
+  cursor: pointer;
+}
+
+
 .skin-blue .main-header .navbar {
   background-color: #3c8dbc;
 }
