--- a/src/app/business/orders/orders.component.html
+++ b/src/app/business/orders/orders.component.html
@@ -28,6 +28,7 @@
                                         <th> Customer Name </th>  
                                         <th>Item</th>
                                         <th> Size </th>
+                                        <th> Quantity </th>
                                         <th>Status</th>
                                     </tr>
                                 </thead>
@@ -39,10 +40,11 @@
                                         <td>{{order.client_name}}</td>
                                         <td>{{order.item_ordered}}</td>
                                         <td>{{order.item_size}}</td>
-                                        <td> {{order.status}} </td>
+                                        <td>{{order.item_quantity}}</td>
+                                        <td> {{order.state}} </td>
                                     </tr>
                                     <tr *ngIf='noOrders'>
-                                        <td colspan="5" class="text-info text-center text-uppercase"> There are no pending orders </td>
+                                        <td colspan="6" class="text-info text-center text-uppercase"> There are no pending orders </td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -117,17 +119,23 @@
                           </div>
                           <div class="col-lg-6">
                             <div class="form-group">
-                                <label for="amount">Delivery Status</label>
-                                <div class="form-group">
-                                    <select name="source" class="form-control" [(ngModel)]='order.status'>
-                                        <option value=""> Select Status </option>
-                                        <option value="0"> Received </option>
-                                        <option value="1"> Processing </option>
-                                        <option value="2"> In Transit </option>
-                                        <option value="3"> Delivered </option>
-                                    </select>
-                                </div>
+                                <label for="amount">Item Quantity</label>
+                                <input type="text" disabled class="form-control" name="item_quantity" [(ngModel)]='order.item_quantity'>
                             </div>
+                          </div>
+                          <div class="col-lg-12">
+                                <div class="form-group">
+                                    <label for="amount">Delivery Status</label>
+                                    <div class="form-group">
+                                        <select name="source" class="form-control" [(ngModel)]='order.status'>
+                                            <option value=""> Select Status </option>
+                                            <option value="0"> Received </option>
+                                            <option value="1"> Processing </option>
+                                            <option value="2"> In Transit </option>
+                                            <option value="3"> Delivered </option>
+                                        </select>
+                                    </div>
+                                </div>
                           </div>
                           
                       </div>
