--- a/src/app/business/p-l/p-l.component.html
+++ b/src/app/business/p-l/p-l.component.html
@@ -8,20 +8,15 @@
       <div class="col-lg-12 col-md-12">
         <div class="box box-success">
           <div class="box-header with-border">
-            <h3 class="box-title"> P&L Position This Year </h3>
+            <h3 class="box-title"> P&L Position This Year</h3>
 
             <div class="box-tools pull-right">
-              <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                <i class="fa fa-minus"></i>
-              </button>
-              <button type="button" class="btn btn-box-tool" data-widget="remove">
-                <i class="fa fa-times"></i>
-              </button>
+              <h4 class='text-{{positionColor}}'>{{position | currency:'₦'}}</h4>
             </div>
           </div>
           <div class="box-body">
             <div class="chart pad-all">
-              <canvas #myChart2 style="height: 200px; width: 200px"></canvas>
+              <canvas #myChart2 style="height: 180px; width: 180px"></canvas>
             </div>
           </div>
           <!-- /.box-body -->
@@ -31,7 +26,7 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-6 col-md-12">
+      <div class="col-lg-12 col-md-12">
         <div class="box box-success">
           <div class="box-header with-border">
             <h3 class="box-title">P&L Position This Month</h3>
@@ -47,7 +42,7 @@
           </div>
           <div class="box-body text-center">
             <div class="chart pad-all ">
-              <canvas #myChart style="height: 85%; width: 85%"></canvas>
+              <canvas #myChart style="height: 180px; width: 180px"></canvas>
             </div>
           </div>
           <!-- /.box-body -->
@@ -55,29 +50,7 @@
         <!-- /.box -->
       </div>
 
-      <div class="col-lg-6 col-md-12">
-        <div class="box box-success">
-          <div class="box-header with-border">
-            <h3 class="box-title"> P&L Position This Week </h3>
-
-            <div class="box-tools pull-right">
-              <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                <i class="fa fa-minus"></i>
-              </button>
-              <button type="button" class="btn btn-box-tool" data-widget="remove">
-                <i class="fa fa-times"></i>
-              </button>
-            </div>
-          </div>
-          <div class="box-body">
-            <div class="chart pad-all ">
-              <canvas #myChart4 style="height: 85%; width: 85%"></canvas>
-            </div>
-          </div>
-          <!-- /.box-body -->
-        </div>
-        <!-- /.box -->
-      </div>
+     
       
     </div>
 
