--- a/src/app/business/revenue/daily-revenue/daily-revenue.component.html
+++ b/src/app/business/revenue/daily-revenue/daily-revenue.component.html
@@ -1,13 +1,7 @@
-<business-nav> </business-nav>
-<div class="content-wrapper">
-    <div *ngIf='loader' class="row text-center">
-        <img style='height: 100%; width: 100%' src="assets/img/loadergif.gif" alt="">
-    </div>       
-
-    <section *ngIf='!loader' class="content">
+<section class="content">
     <br>
     <div class="row">
-      <h3 class="text-center"> Customer List </h3>
+      <h3 class="text-center"> {{today}}'s Earnings <button (click)='reset()' class='btn btn-info'> <i class='fa fa-arrow-left'></i> Back </button>  </h3>
     </div>
 
     <div class="row">
@@ -20,21 +14,29 @@
               <table class="table table-hover table-bordered no-margin">
                 <thead>
                   <tr style="background-color: #0e0e28; color: white">
-                    <th class='text-center'>Customer Name</th>
-                    <th class='text-center'>Customer Phone Number</th>
+                    <th class='text-center'>Amount</th>
                     <th class='text-center'>Source</th>
+                    <th class='text-center'>Staff</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let customer of customers">
+                  <tr *ngFor="let transaction of transactions ">
                     <td class='text-center'>
-                      <a> {{customer.customer_name}} </a>
+                      <a> {{transaction.amount | currency:'₦'}} </a>
                     </td>
-                    <td class='text-center'>{{customer.customer_phone_number}}</td>
+                    <td class='text-center'> 
+                      <span class="label label-success">
+                          {{transaction.source | uppercase}}
+                      </span>
+                    </td>
                     <td class='text-center'>
-                      <span class="label label-success">{{customer.source | uppercase}}</span>
+                          {{transaction.staff}}
                     </td>
 
+                  </tr>
+                  <tr>
+                    <td  class='text-center bg-success' colspan='2'> Total </td>
+                    <td class='text-center' > {{total | currency:'₦'}} </td>
                   </tr>
                 </tbody>
               </table>
@@ -48,5 +50,4 @@
       </div>
     </div>
 
-  </section>
-</div>
+    </section>
