--- a/src/app/public/bookings/bookings.component.html
+++ b/src/app/public/bookings/bookings.component.html
@@ -1,10 +1,11 @@
-<div  *ngIf='loader' class="row text-center">
-    <img style='height: 100%; width: 100%' src="assets/img/loadergif.gif" alt="">
-</div>
 
-<div  *ngIf='!loader'>
+
+
     <app-nav></app-nav>
-    <div class="content" style="margin-top:-19px; padding: 0">
+    <div  *ngIf='loader' class="row text-center">
+        <img style='height: 100%; width: 100%' src="assets/img/loadergif.gif" alt="">
+    </div>
+    <div  *ngIf='!loader' class="content" style="margin-top:-19px; padding: 0">
       <div class="row">
         <div class="col-lg-12">
           <div class="col-lg-6 hidden-sm hidden-xs picture">
@@ -103,7 +104,7 @@
       </div>
     </div>
     <app-footer></app-footer>
-</div>
+
 
 <div class="modal fade modal-{{status}}" id="modal-default">
   <div class="modal-dialog">
@@ -114,7 +115,7 @@
         </button>
         <h4 class="modal-title">{{title}}</h4>
       </div>
-      <div class="modal-body">
+      <div class="modal-body text-center">
           {{errMsg}}
       </div>
       <div class="modal-footer">
