--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,10 +1,11 @@
-<div *ngIf='loader' class="row text-center">
-    <img style='height: 100%; width: 100%' src="assets/img/loadergif.gif" alt="">
-</div>
 
-<div *ngIf='!loader'>
+
+<div >
     <app-nav></app-nav>
-    <div  class="content" style="margin-top: -19px; overflow: hidden; padding: 0">
+    <div *ngIf='loader' class="row text-center">
+            <img style='height: 100%; width: 100%' src="assets/img/loadergif.gif" alt="">
+        </div>
+    <div *ngIf='!loader' class="content" style="margin-top: -19px; overflow: hidden; padding: 0">
         <div class="row">
 
             <div class="col-lg-12">
